implemented simple timer, still wingame logic to be implemented

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="display-left" class="display"></div>
             <button class="new-game-button"></button>
             <div id="display-right" class="display">
-                <span id = "minutes"></span>:<span id = "seconds"></span>
+                <span id = "minutes">0</span>:<span id = "seconds">00</span>
             </div>
         </div>
 
