added difficulty buttons and some style adjustments

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <h1>Boro's Mimesweeper</h1>
     
     <div class="main-container">
+        <div class="top-container">
+            <button id="easy" class="difficulty-button" title="10x10 with 10 Mimes">Easy</button>
+            <button id="medium" class="difficulty-button" title="16x16 with 40 Mimes">Medium</button>
+            <button id="hard" class="difficulty-button" title="16x30 with 99 Mimes">Hard</button>
+        </div>
         <!--below contains the timer, the newgame button and the flag number display-->
         <div class="top-container">
             <div id="display-left" class="display"></div>
