adjusted styling, added newGameButton icons depending on state of current game

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!--below contains the timer, the newgame button and the flag number display-->
         <div class="top-container">
             <div id="display-left" class="display"></div>
-            <button class="new-game-button"></button>
+            <button id="new-game" class="new-game-button"></button>
             <div id="display-right" class="display">
                 <span id = "minutes">0</span>:<span id = "seconds">00</span>
             </div>
