added game won logic and overlay with popup;

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         </div>
     </div>   
 
+    <div id="game-won" class="game-won-overlay game-won-overlay-closed">
+        <div class="game-won-popup">
+            <span>You won! Your time is:</span>
+            <span id="final-time"></span>
+            <button id="overlay-button" class="difficulty-button">OK</button>
+        </div>
+    </div>
+
     <script src="js/index.js" charset="utf-8"></script>
 </body>
 </html>
