changed project structure - created separate module for PlayingField class and fixed all the references

--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
         </div>
     </div>
 
-    <script src="js/index.js" charset="utf-8"></script>
+    <script type="module" src="js/index.js" charset="utf-8"></script>
 </body>
 </html>
