re-written some of the logic encapsulating all of it in the PlayingField class. Additional classes to be created

--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Mimesweeper</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Major+Mono+Display&family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Boro's Mimesweeper</h1>
@@ -38,7 +34,7 @@
     <div id="game-won" class="game-won-overlay game-won-overlay-closed">
         <div class="game-won-popup">
             <span>You won! Your time is:</span>
-            <span id="final-time"></span>
+            <span id="final-time" class="final-time"></span>
             <button id="overlay-button" class="difficulty-button">OK</button>
         </div>
     </div>
